# Proyecto-MLOPS-Intermediate

./: .gitignore  dvc.yaml  environment.yml  pyproject.toml  tasks.py
.dvc/: config
configs/: data_eng.yaml  model1.yaml  model_eng.yaml
configs/experiments/: exp1.yaml  exp2.yaml
data/interim/: .gitignore
data/processed/: .gitignore
data/raw/: Dataset.csv.dvc
outputs/2025-05-29/18-55-47/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-29/19-48-49/.hydra/: hydra.yaml
outputs/2025-05-29/19-57-04/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-05-29/19-58-16/.hydra/: hydra.yaml
outputs/2025-05-29/19-58-39/.hydra/: hydra.yaml
outputs/2025-05-29/20-03-57/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-05-29/20-44-32/.hydra/: hydra.yaml
outputs/2025-05-29/20-45-06/.hydra/: hydra.yaml
outputs/2025-05-29/21-24-21/.hydra/: hydra.yaml
outputs/2025-05-29/21-25-19/.hydra/: hydra.yaml
outputs/2025-05-29/21-28-37/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-29/21-33-25/.hydra/: hydra.yaml
outputs/2025-05-29/21-49-06/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-29/21-55-02/.hydra/: hydra.yaml
outputs/2025-05-29/22-09-16/.hydra/: hydra.yaml
outputs/2025-05-29/22-25-14/.hydra/: hydra.yaml
reports/: params.json  scores.json
src/data_eng/: stage0_loading.py  stage1_ingestion.py  stage2_cleaning.py  stage3_labeling.py  stage4_splitting.py
src/model_eng/: stage1_2_train_evaluate.py  stage3_prediction.py
src/model_eng/model1/: stage1_2_train_evaluate.py  stage3_prediction.py
(+55 files in other folders)
