[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MLOPS-Project"
version = "0.1.0"
authors = [{name = "Tu Nombre", email = "tu@correo.com"}]
description = "Proyecto de predicción de costos en cadena de suministro"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
ingest = "data_eng.stage1_ingestion:main"
clean = "data_eng.stage2_cleaning:main"
feature_enginnering = "data_eng.stage3_labeling:main"
splitting = "data_eng.stage4_splitting:main"
train_evaluate = "model_eng.stage1_2_train_evaluate:main"